0.1698
    - fixed DBIx::Custom::Where to_string method small bug
0.1697
    - added EXPERIMENTAL map_param method
0.1696
    - added new argument format update, delete, select method where option
    - create_query is DEPRECATED! use query option of each method instead.
    - added EXPERIMENTAL insert, update, and select method prefix option
    - fixed small insert, update, delete, select method id option bug
0.1695
    - changed EXPERIMENTAL DBIx::Custom::Result type_rule_off method argument
    - added EXPERIMENTAL DBIx::Custom::Result type_rule_on method
    - changed EXPERIMENTAL DBIx::Custom::Result type_rule1_off method argument
    - added EXPERIMENTAL DBIx::Custom::Result type_rule1_on method
    - changed EXPERIMENTAL DBIx::Custom::Result type_rule2_off method argument
    - added EXPERIMENTAL DBIx::Custom::Result type_rule2_on method
    - changed EXPERIMENTAL DBIx::Custom::Result filter_off method argument
    - added EXPERIMENTAL DBIx::Custom::Result filter_on method
0.1694
    - EXPERIMENTAL type_rule argument format is changed
    - DBIx::Custom::Result type_rule method on setting return self 
    - reserved_word_quote is DEPRECATED! this is renamed to quote
    - DBIx::Custom::Model type attribute is DEPRECATED!
      this is renamed to bind_type.
0.1693
    - separate DBIx::Custom type_rule from filter
    - DBIx::Custom::Model filter attrribute is DEPRECATED!
    - DBIx::Custom::Model name attribute is DEPRECATED!
    - removed EXPERIMENTAL DBIx::Custom::Model alias_table
    - added DBIx::Custom column method's table option
    - separate DBIx::Custom::Result type_rule from filter again
0.1692
    - removed EXPERIMENTAL DBIx::Model result_filter
    - DBIx::Custom::Result filter override type_rule
    - added EXPERIMENTAL DBIx::Custom::Result type_rule
    - added EXPERIMENTAL available_type_name method 
    - EXPERIMENTAL type_rule_off is not passed form execute method 
      to DBIx::Custom::Result object
0.1691